.k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wemind-api-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth(/|$)(.*)
            # Use ImplementationSpecific for regex patterns
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - path: /billing(/|$)(.*)
            # Use ImplementationSpecific for regex patterns
            pathType: ImplementationSpecific
            backend:
              service:
                name: billing-service
                port:
                  number: 3002
